--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "dependencies": {
-    "sashashakun/ssr-scroll-to": "0.0.2"
+    "scroll-to": "sashashakun/ssr-scroll-to"
   },
   "keywords": [
     "react",
