--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "dependencies": {
-    "scroll-to": "sashashakun/ssr-scroll-to"
+    "raf": "^3.4.0",
+    "scroll-to": "sashashakun/ssr-scroll-to",
+    "tween": "^0.9.0"
   },
   "keywords": [
     "react",
